/*
 * $Id: ChangeLog,v 1.1356 2014-08-16 13:52:52 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2014-08-16 10:52 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * doc/classes.txt
   * manual/classes.htm
   * manual/changelog.htm
     * Updated.
   * source/h_frame.prg
     * Format.
     + Method Caption.
     ! Under XP, when caption is changed, part of the old text
       remains visible.

2014-08-13 20:35 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ide/prgs/formedit.prg
     + "Print Brief" option to context menu.
       Thanks to Ricardo Sassy for this contribution.
     ! Duplicate add to properties arrays.
     * Method IniArray: some references to myForm: replaced by ::
   * include/i_browse.ch
   * include/i_hmg_compat.ch
     * Some tag's names.

2014-08-13 19:37 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * doc/classes.txt
   * manual/classes.htm
   * manual/changelog.htm
     * Updated.

2014-08-13 19:28 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_editbox.ch
     ! Typo.

2014-08-13 19:22 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_editbox.ch
     + ON VSCROLL and ON HSCROLL clauses.
   * include/i_richeditbox.ch
     + ON SELECT, FILE, PLAINTEXT, FILETYPE, ON VSCROLL and ON HSCROLL
       clauses. Note that FILE takes precedence over FIELD and VALUE.
   * include/i_windefs.ch
     + EN_HSCROLL and EN_VSCROLL constants.
   * include/i_window.ch
     + TopMost, HelpButton, ItemHeight, RichValue, OnGotFocus,
       OnLostFocus, OnDblClick, OnChange, HeaderImage and AddPage
       clauses to semi-oop syntax. These adds more compatibility
       with HMG Extended.
   * source/c_windows.c
     ! Functions _GetBitmap and _SaveBitmap save wrong display area
       when bAll parameter is .T.
   * source/h_controlmisc.prg