@@ -1,11 +1,17 @@
-/*
- * $Id: ChangeLog,v 1.1356 2014-08-16 13:52:52 fyurisich Exp $
+﻿/*
+ * $Id: ChangeLog,v 1.1357 2014-08-25 05:24:53 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2014-08-24 23:50 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+   * source/c_image.c
+     + _OOHG_StretchBltMode() function added.
+     ; Use _OOHG_StretchBltMode( 4 ) /* HALFTONE */ for better
+       quatily when reducing images (slower but quality).
 
 2014-08-16 10:52 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
    * doc/classes.txt
